@@ -5,6 +5,9 @@ update-manager (1:0.93.22) intrepid; urgency=low
       thanks to ScottK
   * DistUpgrade/DistUpgradeViewGtk.py:
     - do not hang if a script fails to run (LP: #280236)
+  * DistUpgrade/DistUpgradeController.py:
+    - do not run post-upgrade quirks handler in partial upgrade
+      mode because they only apply to real release upgrades
 
  --
 
